--- a/Java/week06/Ex6_9.html
+++ b/Java/week06/Ex6_9.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--Ex6_9.html-->
 <html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
  <style> 
- .size[width:97%;]
+  .size{width:97%;}
 </style>
 <title>실습6</title></head>
 <body><header></header><section>
