--- a/Java/week07/Hw7-1.html
+++ b/Java/week07/Hw7-1.html
@@ -7,15 +7,15 @@
 <title>실습7</title></head>
 <body>
  <h3><p>이정은</p><p>소스코드</p></h3>
-  <img class="size" src="h1.png" border=0>
-  <img class="size" src="h2.png" border=0>
-  <img class="size" src="h3.png" border=0>
-  <img class="size" src="h4.png" border=0>
+  <img class="size" src="h1.PNG" border=0>
+  <img class="size" src="h2.PNG" border=0>
+  <img class="size" src="h3.PNG" border=0>
+  <img class="size" src="h4.PNG" border=0>
 
  <h3><p>결과화면</p></h3>
-  <img class="size" src="h1-1.png"border=0>
-  <img class="size" src="h2-1.png"border=0>
-  <img class="size" src="h3-1.png"border=0>
-  <img class="size" src="h4-1.png"border=0>
+  <img class="size" src="h1-1.PNG"border=0>
+  <img class="size" src="h2-1.PNG"border=0>
+  <img class="size" src="h3-1.PNG"border=0>
+  <img class="size" src="h4-1.PNG"border=0>
 
 </body></html>
