--- a/Java/week07/Hw7-2.html
+++ b/Java/week07/Hw7-2.html
@@ -7,15 +7,15 @@
 <title>실습7</title></head>
 <body>
  <h3><p>이정은</p><p>소스코드</p></h3>
-  <img class="size" src="h5.png" border=0>
-  <img class="size" src="h6.png" border=0>
-  <img class="size" src="h7.png" border=0>
-  <img class="size" src="h8.png" border=0>
+  <img class="size" src="h5.PNG" border=0>
+  <img class="size" src="h6.PNG" border=0>
+  <img class="size" src="h7.PNG" border=0>
+  <img class="size" src="h8.PNG" border=0>
 
  <h3><p>결과화면</p></h3>
-  <img class="size" src="h5-1.png"border=0>
-  <img class="size" src="h6-1.png"border=0>
-  <img class="size" src="h7-1.png"border=0>
-  <img class="size" src="h8-1.png"border=0>
+  <img class="size" src="h5-1.PNG"border=0>
+  <img class="size" src="h6-1.PNG"border=0>
+  <img class="size" src="h7-1.PNG"border=0>
+  <img class="size" src="h8-1.PNG"border=0>
 
 </body></html>
