--- a/Java/week11/Ex10_5.html
+++ b/Java/week11/Ex10_5.html
@@ -8,5 +8,5 @@
  <h4>이정은</h4><p>소스코드</p>
   <img class="size" src="10-5.png"alt="소스코드"/>
  <p>결과화면</p>
-  <img class="size" src="10-5-1.png"alt="결과화면"/>
+  <img class="size" src="10-5-1.PNG"alt="결과화면"/>
 </section></body></html>
