--- a/Java/week07/Hw7-2.html
+++ b/Java/week07/Hw7-2.html
@@ -6,16 +6,24 @@
 </style>
 <title>실습7</title></head>
 <body>
- <h3><p>이정은</p><p>소스코드</p></h3>
+ <h3><p>이정은</p><p>절차 소스코드</p></h3>
   <img class="size" src="h5.PNG" border=0>
-  <img class="size" src="h6.PNG" border=0>
-  <img class="size" src="h7.PNG" border=0>
-  <img class="size" src="h8.PNG" border=0>
-
- <h3><p>결과화면</p></h3>
+  <h3><p>결과화면</p></h3>
   <img class="size" src="h5-1.PNG"border=0>
+ 
+  <h3><p>이정은</p><p>함수 소스코드</p></h3>
+  <img class="size" src="h6.PNG" border=0>
+   <h3><p>결과화면</p></h3>
   <img class="size" src="h6-1.PNG"border=0>
+
+  <h3><p>이정은</p><p>객체 소스코드</p></h3>
+  <img class="size" src="h7.PNG" border=0>
+   <h3><p>결과화면</p></h3>
   <img class="size" src="h7-1.PNG"border=0>
+
+  <h3><p>이정은</p><p>자바빈 소스코드</p></h3>
+  <img class="size" src="h8.PNG" border=0>
+  <h3><p>결과화면</p></h3>
   <img class="size" src="h8-1.PNG"border=0>
 
 </body></html>
