--- a/Java/week07/Hw7-3.html
+++ b/Java/week07/Hw7-3.html
@@ -24,6 +24,6 @@
  <h3><p>이정은</p><p>자바빈 소스코드</p></h3>
   <img class="size" src="h12.PNG" border=0>
  <h3><p>결과화면</p></h3>
-  <img class="size" src="h12-1.PNG"border=0>
+  <img class="size" src="00.png"border=0>
 
 </body></html>
