--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -137,6 +137,26 @@
     <li><a href="https://xowlty.github.io/Java/week11/Ex10_5.html" target="_blank">Ex10_5</a></li>
    </ol>
   </li>
+  <li id="week12">12주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_1.html" target="_blank">Ex11_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_2.html" target="_blank">Ex11_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_3.html" target="_blank">Ex11_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_4.html" target="_blank">Ex11_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_5.html" target="_blank">Ex11_5</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_6.html" target="_blank">Ex11_6</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_7.html" target="_blank">Ex11_7</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_8.html" target="_blank">Ex11_8</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_9.html" target="_blank">Ex11_9</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex11_10.html" target="_blank">Ex11_10</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Hw11.html" target="_blank">Hw11</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex12_1.html" target="_blank">Ex12_1</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex12_2.html" target="_blank">Ex12_2</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex12_3.html" target="_blank">Ex12_3</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Ex12_4.html" target="_blank">Ex12_4</a></li>
+    <li><a href="https://xowlty.github.io/Java/week12/Hw12.html" target="_blank">Hw12</a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
