--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -157,6 +157,11 @@
     <li><a href="https://xowlty.github.io/Java/week12/Hw12.html" target="_blank">숙제</a></li>
    </ol>
   </li>
+  <li id="week13">13주차
+   <ol>
+    <li><a href="https://xowlty.github.io/Java/week13/BookStore.html" target="_blank">BookStore</a></li>
+   </ol>
+  </li>
  </ul>
 </body>
 </html>
