--- a/Java/week13/BookStore.html
+++ b/Java/week13/BookStore.html
@@ -6,21 +6,21 @@
 <title>실습13</title></head>
 <body><header></header><section>
 
- <h4>이정은</h4><p>book 소스코드</p>
+  <h1>이정은</h1><p><b><h3>book 소스코드</h3></b></p>
   <img class="size" src="book.png"alt="소스코드"/>
   
-   <h4>이정은</h4><p>bookstore 소스코드</p>
+  <h3> <p>bookstore 소스코드</p></h3>
   <img class="size" src="bookstore1.png"alt="소스코드"/>
   <img class="size" src="bookstore2.png"alt="소스코드"/>
   <img class="size" src="bookstore3.png"alt="소스코드"/>
 
   
-   <h4>이정은</h4><p>mystore 소스코드</p>
+  <h3> <p>mystore 소스코드</p></h3>
   <img class="size" src="mystore.png"alt="소스코드"/>
   
-   <h4>이정은</h4><p>student 소스코드</p>
+  <h3><p>student 소스코드</p></h3>
   <img class="size" src="student.png"alt="소스코드"/>
   
- <p>my store 결과화면</p>
+  <h3><p>my store 결과화면</p></h3>
   <img class="size" src="result"alt="결과화면"/>
 </section></body></html>
