--- a/portfolio/2021_portfolio.html
+++ b/portfolio/2021_portfolio.html
@@ -21,7 +21,7 @@ A:hover{COLOR:orange; TEXT-DECORATION:none}
 @media only screen and (min-width: 768px){.col-3{width:25%;} .col-6{width:50%;}}
 </style>
 <title>2021 이정은 포트폴리오</title></head>
-  <body><header class="header"><a href="portfolio.html"><h2>2021 이정은 포트폴리오</h2></a></header>
+  <body><header class="header"><a href="2021_portfolio.html"><h2>2021 이정은 포트폴리오</h2></a></header>
 <div class="row"></div>
 <div id="main">
 <nav class="col-3 col-m-3 menu">
